Fix overflow of main content
- Change body height to min height
- Add gap to main
- Change place content property of main to space evenly

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ h6 {
 
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   min-width: 351px;
 }
@@ -105,7 +105,8 @@ h1 {
 
   main {
     display: grid;
-    place-content: space-around;
+    place-content: space-evenly;
+    gap: 15px;
     grid-template-columns: auto;
     flex: 1;
   }
